# funai-infer-chain

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.signer  FunAI_Development_Guide_V06.docx  FunAI_Technical_Specification_V3.1.docx  README.md  funai-mining.md  stacks-mining.md
clarity/: Cargo.toml
clarity/fuzz/: Cargo.toml
clarity/fuzz/fuzz_targets/: fuzz_sanitize.rs
clarity/src/: libclarity.rs
clarity/src/vm/: callables.rs  clarity.rs  contexts.rs  contracts.rs  errors.rs  events.rs  mod.rs  representations.rs  version.rs
clarity/src/vm/analysis/: analysis_db.rs  mod.rs  types.rs
clarity/src/vm/ast/: mod.rs
clarity/src/vm/costs/: mod.rs
clarity/src/vm/database/: clarity_db.rs  clarity_store.rs  key_value_wrapper.rs  sqlite.rs  structures.rs
clarity/src/vm/docs/: contracts.rs  mod.rs
clarity/src/vm/functions/: assets.rs  conversions.rs  crypto.rs  database.rs  mod.rs  principals.rs  sequences.rs
clarity/src/vm/test_util/: mod.rs
clarity/src/vm/tests/: assets.rs  contracts.rs  defines.rs  mod.rs  principals.rs  sequences.rs  simple_apply_eval.rs  traits.rs
clarity/src/vm/types/: mod.rs  serialization.rs  signatures.rs
contrib/helm/stacks-blockchain/: README.md
contrib/init/: README.md
docs/: nakamoto-inference-reward-distribution.md  network-participation-guide.md  pox4_infer_extension.md  pox4_infer_extension_en.md
funai-common/: Cargo.toml
funai-common/src/: bitvec.rs  libcommon.rs
funai-common/src/codec/: macros.rs  mod.rs
funai-common/src/types/: chainstate.rs  mod.rs
funai-common/src/util/: hash.rs
funai-genesis/: Cargo.toml  chainstate.txt  chainstate.txt.sha256
funai-signer/: Cargo.toml  INFERENCE_SERVICE.md  README.md
funai-signer/src/: cli.rs  config.rs  coordinator.rs  encryption.rs  inference_api.rs  inference_service.rs  lib.rs  main.rs  node_scheduler.rs  runloop.rs  signer.rs  signerdb.rs
funai-signer/src/client/: funai_client.rs  funaidb.rs  mod.rs
funailib/: Cargo.toml
funailib/src/: blockstack_cli.rs  clarity_cli.rs  clarity_cli_main.rs  lib.rs  main.rs
funailib/src/burnchains/: affirmation.rs  burnchain.rs  db.rs  indexer.rs  mod.rs
funailib/src/burnchains/bitcoin/: address.rs  bits.rs  blocks.rs  indexer.rs  keys.rs  messages.rs  mod.rs  network.rs  spv.rs
funailib/src/burnchains/tests/: affirmation.rs  burnchain.rs  db.rs  mod.rs
funailib/src/chainstate/: mod.rs
funailib/src/chainstate/burn/: distribution.rs  mod.rs  sortition.rs
funailib/src/chainstate/coordinator/: comm.rs  mod.rs  tests.rs
funailib/src/chainstate/funai/: address.rs  auth.rs  block.rs  events.rs  miner.rs  mod.rs  transaction.rs
funailib/src/chainstate/nakamoto/: miner.rs  mod.rs  signer_set.rs  staging_blocks.rs  tenure.rs  test_signers.rs
funailib/src/clarity_vm/: clarity.rs  mod.rs  special.rs
funailib/src/clarity_vm/database/: marf.rs  mod.rs
funailib/src/clarity_vm/tests/: analysis_costs.rs  ast.rs  contracts.rs  costs.rs  epoch_switch.rs  events.rs  forking.rs  large_contract.rs  mod.rs  simple_tests.rs
funailib/src/core/: mempool.rs  mod.rs
funailib/src/core/tests/: mod.rs
funailib/src/cost_estimates/: fee_medians.rs  fee_rate_fuzzer.rs  fee_scalar.rs  mod.rs  pessimistic.rs
funailib/src/cost_estimates/tests/: common.rs  cost_estimators.rs  fee_medians.rs  fee_rate_fuzzer.rs  fee_scalar.rs  metrics.rs
funailib/src/monitoring/: mod.rs  prometheus.rs
funailib/src/net/: asn.rs  chat.rs  codec.rs  connection.rs  db.rs  dns.rs  httpcore.rs  mod.rs  p2p.rs  poll.rs  prune.rs  relay.rs  rpc.rs  server.rs
funailib/src/net/api/: callreadonly.rs  getaccount.rs  getattachment.rs  getattachmentsinv.rs  getblock.rs  getblock_v3.rs  getconstantval.rs  getcontractabi.rs  getcontractsrc.rs  getdatavar.rs  getfunaidbchunk.rs  getfunaidbmetadata.rs  getfunais.rs  getheaders.rs  getinferresult.rs  getinfo.rs  getistraitimplemented.rs  getmapentry.rs  getmicroblocks_confirmed.rs  getmicroblocks_indexed.rs  getmicroblocks_unconfirmed.rs  getneighbors.rs  getpoxinfo.rs  getstxtransfercost.rs  gettenure.rs  gettenureinfo.rs  gettransaction_unconfirmed.rs  listfunaidbreplicas.rs  mod.rs  postblock.rs  postblock_proposal.rs  postfeerate.rs  postfunaidbchunk.rs  postmempoolquery.rs  postmicroblock.rs  posttransaction.rs
funailib/src/net/atlas/: db.rs  download.rs  mod.rs  tests.rs
funailib/src/net/download/: epoch2x.rs  mod.rs
funailib/src/net/funaidb/: config.rs  db.rs  mod.rs  sync.rs
funailib/src/net/http/: common.rs  error.rs  mod.rs  request.rs  (+3 more)
funailib/src/util_lib/: bloom.rs  boot.rs  db.rs  mod.rs  signed_structured_data.rs  strings.rs
libfunaidb/: Cargo.toml
libfunaidb/src/: libfunaidb.rs
libfunaidb/src/tests/: mod.rs
libllm/: Cargo.toml
libllm/src/: db.rs  lib.rs
libsigner/: Cargo.toml
libsigner/src/: error.rs  events.rs  http.rs  libsigner.rs  messages.rs  runloop.rs  session.rs  signer_set.rs
libsigner/src/tests/: http.rs  mod.rs
migration-verification/: Dockerfile  README.md
net-test/: README.md
pox-locking/: Cargo.toml
pox-locking/src/: events.rs  events_24.rs  lib.rs  pox_1.rs  pox_2.rs  pox_3.rs  pox_4.rs
stacks-common/src/: libcommon.rs
stacks-signer/: Cargo.toml
stackslib/src/burnchains/: mod.rs
stackslib/src/core/: mod.rs
stackslib/src/cost_estimates/: pessimistic.rs
testnet/funai-node/: Cargo.toml  Stacks.toml
testnet/funai-node/conf/: fai-mainnet-miner-conf.toml  local-follower-conf.toml  mainnet-follower-conf.toml  mainnet-miner-conf.toml  mainnet-mockminer-conf.toml  mocknet-follower-conf.toml  prometheus.yml  regtest-follower-conf.toml  signer-config.toml  testnet-follower-conf.toml  testnet-miner-conf.toml
testnet/funai-node/src/: chain_data.rs  config.rs  event_dispatcher.rs  funai_events.rs  globals.rs  keychain.rs  main.rs  nakamoto_node.rs  neon_node.rs  node.rs  operations.rs  syncctl.rs  tenure.rs
testnet/infer-node/: Cargo.toml  Dockerfile  config.toml.sample
testnet/infer-node/src/: config.rs  main.rs
testnet/stacks-node/: Cargo.toml
testnet/stacks-node/conf/: fai-mainnet-miner-conf.toml  signer-config.toml  testnet-miner-conf.toml
(+193 files in other folders)
