[package]
name = "funai-signer"
version = "0.0.1"
authors = [ "Jude Nelson <jude@funai.org>" ]
license = "GPLv3"
homepage = "https://github.com/blockstack/funai-blockchain"
repository = "https://github.com/blockstack/funai-blockchain"
description = "Stacker signer binary"
keywords = [ "funai", "stx", "bitcoin", "crypto", "blockstack", "decentralized", "dapps", "blockchain" ]
readme = "README.md"
resolver = "2"
edition = "2021"

[lib]
name = "funai_signer"
path = "src/lib.rs"

[[bin]]
name = "infer-signer"
path = "src/main.rs"

[dependencies]
backoff = "0.4"
clarity = { path = "../clarity" }
clap = { version = "4.1.1", features = ["derive", "env"] }
hashbrown = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
libsigner = { path = "../libsigner" }
libfunaidb = { path = "../libfunaidb" }
rand_core = "0.6"
reqwest = { version = "0.11.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1"
serde_derive = "1"
serde_funai = { package = "serde_stacker", version = "0.1" }
slog = { version = "2.5.2", features = [ "max_level_trace" ] }
slog-json = { version = "2.3.0", optional = true }
slog-term = "2.6.0"
slog-async = "2.8.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
funai-common = { path = "../funai-common" }
funailib = { path = "../funailib" }
libllm = { path = "../libllm" }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
toml = "0.5.6"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
wsts = { workspace = true }
rand = { workspace = true }
url = "2.1.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
clarity = { path = "../clarity", features = ["testing"] }
polynomial = "0.2.6"
num-traits = "0.2.18"

[dependencies.rusqlite]
version = "=0.24.2"
features = ["blob", "serde_json", "i128_blob", "bundled", "trace"]

[dependencies.serde_json]
version = "1.0"
features = ["arbitrary_precision", "unbounded_depth"]

[dependencies.secp256k1]
version = "0.24.3"
features = ["serde", "recovery"]

[dependencies.k256]
version = "0.13"
features = ["ecdsa", "sha2"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.hex]
version = "0.4"

[dependencies.aes-gcm]
version = "0.10"

[dependencies.sha2]
version = "0.10"
