[package]
name = "libllm"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
dotenvy = "0.15.7"

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
openai = "1.0.0-alpha.14"
tokio = { version = "1.26.0", features = ["full"] }
funai-common = { path = "../funai-common" }
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
k256 = { version = "0.13", features = ["ecdsa", "sha2"] }
chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.rusqlite]
version = "=0.24.2"
features = ["blob", "serde_json", "i128_blob", "bundled", "trace"]
