[package]
name = "libsigner"
version = "0.0.1"
authors = [ "Jude Nelson <jude@funai.org>" ]
license = "GPLv3"
homepage = "https://github.com/blockstack/funai-blockchain"
repository = "https://github.com/blockstack/funai-blockchain"
description = "Library for Stacks signer daemons"
keywords = [ "funai", "stx", "bitcoin", "crypto", "blockstack", "decentralized", "dapps", "blockchain" ]
readme = "README.md"
resolver = "2"
edition = "2021"

[lib]
name = "libsigner"
path = "./src/libsigner.rs"

[dependencies]
clarity = { path = "../clarity" }
hashbrown = { workspace = true }
libc = "0.2"
libfunaidb = { path = "../libfunaidb" }
serde = "1"
serde_derive = "1"
serde_funai = { package = "serde_stacker", version = "0.1" }
slog = { version = "2.5.2", features = [ "max_level_trace" ] }
slog-term = "2.6.0"
slog-json = { version = "2.3.0", optional = true }
funai-common = { path = "../funai-common" }
funailib = { path = "../funailib"}
thiserror = "1.0"
tiny_http = "0.12"
wsts = { workspace = true }

[dev-dependencies]
rand_core = { workspace = true }
rand = { workspace = true }

[dependencies.serde_json]
version = "1.0"
features = ["arbitrary_precision", "unbounded_depth"]

[dependencies.secp256k1]
version = "0.24.3"
features = ["serde", "recovery"]

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"), not(any(target_os="windows"))))'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }

[target.'cfg(any(not(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")), any(target_os = "windows")))'.dependencies]
sha2 = { version = "0.10" }
