[package]
name = "infer-node"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
libllm = { path = "../../libllm" }
funai-common = { path = "../../funai-common" }
funailib = { path = "../../funailib" }
clarity = { path = "../../clarity" }
log = "0.4"
env_logger = "0.10"
hex = "0.4.3"
slog = { version = "2.5.2", features = ["max_level_trace"] }
slog-term = "2.6.0"
slog-async = "2.8.0"
uuid = { version = "1.0", features = ["v4"] }
toml = "0.5.6"
clap = { version = "4.1.1", features = ["derive", "env"] }
sha2 = "0.10"
secp256k1 = "0.24"

[[bin]]
name = "infer-node"
path = "src/main.rs"

